# lumina

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  vercel.json  vercel.ts
.github/workflows/: ci.yml
apps/api/: .env.railway  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  vercel.json
apps/api/api/: app_db.py  app_models.py
apps/api/api/routes/: agent.py  disease.py  fhir.py  intake.py  score.py  search.py  submissions.py
apps/web/: README.md  i18n.ts  next.config.ts  package.json  pnpm-lock.yaml
apps/web/public/docimages/: pleased-young-female-doctor-wearing-medical-robe-stethoscope-around-neck-standing-with-closed-posture_409827-254.jpg.avif
apps/web/public/lumina/: doctor-hero.avif  doctor-score.avif
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/[locale]/: layout.tsx  page.tsx
apps/web/src/app/[locale]/about/: page.tsx
apps/web/src/app/[locale]/cases/: page.tsx
apps/web/src/app/[locale]/clinical-beta/: page.tsx
apps/web/src/app/[locale]/clinical-notes/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/demo/: page.tsx
apps/web/src/app/intake/: page.tsx
apps/web/src/components/: nav.tsx
apps/web/src/components/auth/: clerk-auth-form.tsx
apps/web/src/components/lumina/: info-page.tsx  practo-ui.tsx  product-page.tsx  referral-letter-sheet.tsx  role-guard.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  input-group.tsx  input.tsx  label.tsx  sheet.tsx  tabs.tsx
apps/web/src/hpo-labels/: de.json  es.json  fr.json  ja.json  zh.json
apps/web/src/i18n/: request.ts  routing.ts
apps/web/src/lib/: api.ts  clerk-localization.ts  demo-cases.ts  formatters.ts  hpo.ts  use-api-actor.ts  user-role.ts
apps/web/src/messages/: de.json  en.json  es.json  fr.json  hi.json  ja.json  ta.json  zh.json
apps/web/src/types/: lumina.ts
scripts/: build_hpo_index.py  eval.py  train_xgb.py
test-results/: .last-run.json
tests/: conftest.py  test_api.py  test_ingest.py  test_scoring.py
(+40 files in other folders)
